# buddy-allocator

./: .gitignore  CMakeLists.txt  README.md
src/: BuddyAllocator.h  DList.h  main.c  sample.c
src_test/: test_BuddyAllocator.c  test_DList.c  test_environment.h
